--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.4",
     "@reduxjs/toolkit": "^1.9.5",
+    "@selectize/selectize": "^0.15.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -16,6 +17,7 @@
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.12.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.3",
     "redux": "^4.2.1",
     "redux-saga": "^1.2.3",
     "redux-thunk": "^2.4.2",
